# long_form_maker

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  find_truncated_srt.py  gunicorn.service  pyproject.toml  verify_plan.py
apps/accounts/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_alter_apikey_options_alter_apikey_unique_together_and_more.py  0003_user_gemini_model.py  0004_alter_user_gemini_model.py  0005_add_gemini_25_models.py  0006_alter_apikey_service.py  0007_update_freepik_service_choices.py  0008_freepikaccount.py  0009_add_cookie_expired_to_freepikaccount.py  0010_remove_first_download_at.py  0011_remove_is_exhausted.py
apps/api/: urls.py  views.py
apps/pipeline/: admin.py  apps.py  models.py  urls.py  views.py
apps/pipeline/migrations/: 0001_initial.py  0002_remove_research_additional_info_and_more.py  0003_stepexecution_logs.py  0004_stepexecution_model_type.py  0005_stepexecution_intermediate_data.py  0006_stepexecution_token_usage.py  0007_add_article_summaries.py  0008_projectimagesettings_sampleimage.py  0009_characterpreset_imagestylepreset_voicepreset_and_more.py  0010_add_user_to_presets.py  (+22 more)
apps/prompts/: admin.py  apps.py  models.py
config/: settings.py  urls.py
config/settings/: __init__.py  base.py  local.py  production.py
templates/: base.html
templates/accounts/: login.html  settings.html
templates/pipeline/: dashboard.html  project_create.html  project_data.html  project_detail.html  project_files.html  project_settings.html  step_execute.html  step_progress.html
(+27 files in other folders)
